[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/LetterChoice.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/pixels.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[node name="LetterChoice" type="Node2D"]
script = ExtResource( 1 )

[node name="Letter" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -26.0
margin_right = 24.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "A"
align = 1
valign = 1

[node name="ArrowBottom" type="Label" parent="."]
visible = false
margin_left = 16.0
margin_top = 28.0
margin_right = 56.0
margin_bottom = 82.0
rect_rotation = 180.0
custom_fonts/font = SubResource( 2 )
text = "^"
align = 1

[node name="ArrowTop" type="Label" parent="."]
visible = false
margin_left = -20.0
margin_top = -34.0
margin_right = 20.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
text = "^"
align = 1

[node name="ArrowBottomTween" type="Tween" parent="."]

[node name="ArrowTopTween" type="Tween" parent="."]
